[project]
name = "inference-for-pecan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.13"
dependencies = [
    "ultralytics>=8.3.196",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "torchaudio>=2.2.2",
    "markupsafe<=3",
    "numpy<2,>=1.26.0",
    "nvidia-ml-py>=12",
    "dotenv>=0.9.9",
    "opencv-python"
]

[tool.setuptools.packages.find]
exclude = []

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
